--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,16 @@
     <%= javascript_include_tag :all, :recursive => true %>
   <% else %>
     <%= javascript_include_tag :all %>
-    <% if not blog? %>
     <%= javascript_include_tag "fancybox/jquery.easing-1.3.pack" %>
     <%= javascript_include_tag "fancybox/jquery.mousewheel-3.0.4.pack" %>
     <%= javascript_include_tag "fancybox/jquery.fancybox-1.3.4" %>
-    <% end %>
   <% end %>
   
   <%= stylesheet_link_tag "daviferreira.css" %>
   <%= stylesheet_link_tag "msgtopo.css" %>
   
   <% if blog? %>
+    <%= auto_discovery_link_tag(:atom, {:controller => "posts", :action => "feed"}) %>
     <%= stylesheet_link_tag "blog.css" %>
     <% if not blog_home_page? %>
     <%= stylesheet_link_tag "/javascripts/sh/styles/shCore.css" %>
