--- a/app/views/posts/_posts_portfolio.html.erb
+++ b/app/views/posts/_posts_portfolio.html.erb
@@ -12,6 +12,6 @@
       <% end %>
     <% end %>
     </ul>
-    <p class="more"><%= link_to raw("Ver todos os artigos &rarr;"), posts_path, :class => "round-small" %></p>
+    <p class="more"><%= link_to raw("Ver todos os artigos &rarr;"), blog_path, :class => "round-small" %></p>
   </div>
 </section>
