--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for @contact, :url => { :controller => "contacts", :action => "create" }, :html => { :method => :post }, :remote => true do |f| %>
+<%= form_for @contact, :url => { :controller => "contacts", :action => "create" }, :html => { :method => :post }, :remote => true do |f| %>
   <div class="field">
     <%= f.label "Seu nome" %>
     <%= f.text_field :name %>
