--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,14 +11,15 @@
 
   	<header id="header">
   		<hgroup>
-  			<h1 class="site_title"><a href="index.html">Website Admin</a></h1>
-  			<h2 class="section_title">Dashboard</h2><div class="btn_view_site"><a href="http://www.medialoot.com">View Site</a></div>
+  			<h1 class="site_title"><a href="index.html">DaviFerreira.com</a></h1>
+  			<% if user_signed_in? %><h2 class="section_title">Dashboard</h2><div class="btn_view_site"><%= link_to "Visitar o site", root_path, :rel => "external" %></div><% end %>
   		</hgroup>
   	</header> <!-- end of header bar -->
 
+    <% if user_signed_in? %>
   	<section id="secondary_bar">
   		<div class="user">
-  			<p>John Doe (<a href="#">3 Messages</a>)</p>
+  			<p><%= current_user.email %></p>
   			<!-- <a class="logout_user" href="#" title="Logout">Logout</a> -->
   		</div>
   		<div class="breadcrumbs_container">
@@ -27,43 +28,44 @@
   	</section><!-- end of secondary bar -->
 
   	<aside id="sidebar" class="column">
-  		<form class="quick_search">
+  		<!-- form class="quick_search">
   			<input type="text" value="Quick Search" onfocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
-  		</form>
+  		</form -->
   		<hr/>
-  		<h3>Content</h3>
+  		<h3>Categorias</h3>
   		<ul class="toggle">
-  			<li class="icn_new_article"><a href="#">New Article</a></li>
-  			<li class="icn_edit_article"><a href="#">Edit Articles</a></li>
-  			<li class="icn_categories"><a href="#">Categories</a></li>
-  			<li class="icn_tags"><a href="#">Tags</a></li>
+  			<li class="icn_new_article"><%= link_to "Nova categoria", new_category_path %></li>
+  			<li class="icn_edit_article"><a href="#">Editar categorias</a></li>
   		</ul>
-  		<h3>Users</h3>
+  		<h3>Projetos</h3>
+  		<ul class="toggle">
+  			<li class="icn_new_article"><a href="#">Novo projeto</a></li>
+  			<li class="icn_edit_article"><a href="#">Editar projetos</a></li>
+  		</ul>
+  		<h3>Posts</h3>
+  		<ul class="toggle">
+  			<li class="icn_new_article"><a href="#">Novo post</a></li>
+  			<li class="icn_edit_article"><a href="#">Editar posts</a></li>
+  			<li class="icn_categories"><a href="#">Comentários</a></li>
+  		</ul>
+  		<h3>Usuários</h3>
   		<ul class="toggle">
   			<li class="icn_add_user"><a href="#">Add New User</a></li>
   			<li class="icn_view_users"><a href="#">View Users</a></li>
   			<li class="icn_profile"><a href="#">Your Profile</a></li>
   		</ul>
-  		<h3>Media</h3>
-  		<ul class="toggle">
-  			<li class="icn_folder"><a href="#">File Manager</a></li>
-  			<li class="icn_photo"><a href="#">Gallery</a></li>
-  			<li class="icn_audio"><a href="#">Audio</a></li>
-  			<li class="icn_video"><a href="#">Video</a></li>
-  		</ul>
   		<h3>Admin</h3>
   		<ul class="toggle">
-  			<li class="icn_settings"><a href="#">Options</a></li>
-  			<li class="icn_security"><a href="#">Security</a></li>
-  			<li class="icn_jump_back"><a href="#">Logout</a></li>
+  			<li class="icn_jump_back"><%= link_to "Logout", destroy_user_session_path %></li>
   		</ul>
 
   		<footer>
   			<hr />
-  			<p><strong>Copyright &copy; 2011 Website Admin</strong></p>
+  			<p><strong>Copyright &copy; 2011 DaviFerreira.com</strong></p>
   			<p>Theme by <a href="http://www.medialoot.com">MediaLoot</a></p>
   		</footer>
   	</aside><!-- end of sidebar -->
+  	<% end %>
 
   	<section id="main" class="column">
   	  
