--- a/public/stylesheets/admin/layout.css
+++ b/public/stylesheets/admin/layout.css
@@ -113,7 +113,7 @@ height: 35px;
 line-height: 35px;
 text-indent: 25px;
 text-shadow: 0 1px 0 #fff;
-background: url(../../images/admin/icn_user.png) no-repeat center left;
+background: url(../../images/admin/icn_categories.png) no-repeat center left;
 margin-left: 6%;
 }
 
