--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,52 +4,30 @@
   <meta charset="utf-8" />
   <title><%= meta_title %></title>
   <meta description="<%= meta_description %>">
-  <% if blog? and not blog_home_page? %>
-    <%= javascript_include_tag :all, :recursive => true %>
-  <% else %>
-    <%= javascript_include_tag :all %>
-    <%= javascript_include_tag "fancybox/jquery.easing-1.3.pack" %>
-    <%= javascript_include_tag "fancybox/jquery.mousewheel-3.0.4.pack" %>
-    <%= javascript_include_tag "fancybox/jquery.fancybox-1.3.4" %>
-  <% end %>
+  <%= javascript_include_tag :all %>
+  <%= javascript_include_tag "fancybox/jquery.easing-1.3.pack" %>
+  <%= javascript_include_tag "fancybox/jquery.mousewheel-3.0.4.pack" %>
+  <%= javascript_include_tag "fancybox/jquery.fancybox-1.3.4" %>
   
   <%= stylesheet_link_tag "daviferreira.css" %>
   <%= stylesheet_link_tag "msgtopo.css" %>
   
-  <% if blog? %>
-    <%= auto_discovery_link_tag(:atom, {:controller => "posts", :action => "feed"}) %>
-    <%= stylesheet_link_tag "blog.css" %>
-    <% if not blog_home_page? %>
-    <%= stylesheet_link_tag "/javascripts/sh/styles/shCore.css" %>
-    <%= stylesheet_link_tag "/javascripts/sh/styles/shThemeDefault.css" %>
-    <% end %>
-  <% else %>
-    <%= stylesheet_link_tag "portfolio.css" %>
-    <%= stylesheet_link_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.css" %>
-  <% end %>
-  
+  <%= stylesheet_link_tag "portfolio.css" %>
+  <%= stylesheet_link_tag "/javascripts/fancybox/jquery.fancybox-1.3.4.css" %>
   <%= csrf_meta_tag %>
   <link rel="shortcut icon" href="/images/favicon.gif" />
 </head>
-<body<% if blog? %> class="blog <% if not blog_home_page? %>post<%end%>"<% end %>>
+<body>
 
-  <% if blog? %>
-    <%= render "layouts/header_blog" %>
-  <% else %>
-    <%= render "layouts/header" %>
-    <%= render "layouts/menu" if home_page? %>
-  <% end %>
+  <%= render "layouts/header" %>
+  <%= render "layouts/menu" if home_page? %>
 
   <section id="main">
     <%= yield %>
   </section>
   
-  <% if blog? %>
-    <%= render "layouts/footer_blog" %>
-  <% else %>
-    <%= render "posts/posts_portfolio" if home_page? %>
-    <%= render "layouts/footer" %>
-  <% end %>
+  <%= render "posts/posts_portfolio" if home_page? %>
+  <%= render "layouts/footer" %>
 
 </body>
 </html>
