--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <title><%= meta_title %></title>
   <meta description="<%= meta_description %>">
-  <% if not blog_home_page? %>
-    <%= javascript_include_tag :all, :recursive => true %>
-  <% else %>
+  <% if blog_home_page? %>
     <%= javascript_include_tag :all %>
     <%= javascript_include_tag "fancybox/jquery.easing-1.3.pack" %>
     <%= javascript_include_tag "fancybox/jquery.mousewheel-3.0.4.pack" %>
     <%= javascript_include_tag "fancybox/jquery.fancybox-1.3.4" %>
+  <% else %>
+    <%= javascript_include_tag :all, :recursive => true %>
   <% end %>
   
   <%= stylesheet_link_tag "daviferreira.css" %>
