--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -52,8 +52,8 @@
   		<h3>Usuários</h3>
   		<ul class="toggle">
   			<li class="icn_add_user"><a href="#">Add New User</a></li>
-  			<li class="icn_view_users"><a href="#">View Users</a></li>
-  			<li class="icn_profile"><a href="#">Your Profile</a></li>
+        <li class="icn_view_users"><%= link_to "Editar usuários", admin_users_path %><!-- a href="#">View Users</a --></li>
+        <li class="icn_profile"><%= link_to "Sua conta", "#" %></li>
   		</ul>
   		<h3>Admin</h3>
   		<ul class="toggle">
@@ -69,8 +69,15 @@
   	<% end %>
 
   	<section id="main" class="column">
-  	  
-  	  <%= yield %>
+
+
+      <article class="module width_full">
+
+
+  	    <%= yield %>
+
+      </article><!-- end of styles article -->
+      <div class="spacer"></div>
 
   	</section>
 
