Admin dashboard view.

--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -1,30 +1,4 @@
-<header><h3>stats</h3></header>
-<div class="module_content">
-  <article class="stats_graph">
-    <img src="http://chart.apis.google.com/chart?chxr=0,0,3000&chxt=y&chs=520x140&cht=lc&chco=76A4FB,80C65A&chd=s:Tdjpsvyvttmiihgmnrst,OTbdcfhhggcTUTTUadfk&chls=2|2&chma=40,20,20,30" width="520" height="140" alt="" />
-  </article>
-
-  <article class="stats_overview">
-    <div class="overview_today">
-      <p class="overview_day">Today</p>
-      <p class="overview_count">1,876</p>
-      <p class="overview_type">Hits</p>
-      <p class="overview_count">2,103</p>
-      <p class="overview_type">Views</p>
-    </div>
-    <div class="overview_previous">
-      <p class="overview_day">Yesterday</p>
-      <p class="overview_count">1,646</p>
-      <p class="overview_type">Hits</p>
-      <p class="overview_count">2,054</p>
-      <p class="overview_type">Views</p>
-    </div>
-  </article>
-  <div class="clear"></div>
-</div>
-</article><!-- end of stats article -->
-
-<article class="module width_3_quarter">
+<article class="module width_full">
 <header><h3 class="tabs_involved">Content Manager</h3>
 <ul class="tabs">
     <li><a href="#tab1">Posts</a></li>
@@ -140,29 +114,6 @@
 
 </article><!-- end of content manager article -->
 
-<article class="module width_quarter">
-<header><h3>Messages</h3></header>
-<div class="message_list">
-  <div class="module_content">
-    <div class="message"><p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor.</p>
-    <p><strong>John Doe</strong></p></div>
-    <div class="message"><p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor.</p>
-    <p><strong>John Doe</strong></p></div>
-    <div class="message"><p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor.</p>
-    <p><strong>John Doe</strong></p></div>
-    <div class="message"><p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor.</p>
-    <p><strong>John Doe</strong></p></div>
-    <div class="message"><p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor.</p>
-    <p><strong>John Doe</strong></p></div>
-  </div>
-</div>
-<footer>
-  <form class="post_message">
-    <input type="text" value="Message" onfocus="if(!this._haschanged){this.value=''};this._haschanged=true;">
-    <input type="submit" class="btn_post_message" value=""/>
-  </form>
-</footer>
-</article><!-- end of messages article -->
 
 <div class="clear"></div>
 
@@ -202,6 +153,8 @@
 </footer>
 </article><!-- end of post new article -->
 
+
+<!--
 <h4 class="alert_warning">A Warning Alert</h4>
 
 <h4 class="alert_error">An Error Message</h4>
@@ -226,4 +179,4 @@
       <li>Cras mattis consectetur purus sit amet fermentum.</li>
     </ul>
   </div>
-
+  -->
