--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -51,7 +51,7 @@
   		</ul>
   		<h3>Usuários</h3>
   		<ul class="toggle">
-  			<li class="icn_add_user"><a href="#">Add New User</a></li>
+        <li class="icn_add_user"><%= link_to "Novo usuário", new_admin_user_path %></li>
         <li class="icn_view_users"><%= link_to "Editar usuários", admin_users_path %><!-- a href="#">View Users</a --></li>
         <li class="icn_profile"><%= link_to "Sua conta", "#" %></li>
   		</ul>
