--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
       <td><input type="checkbox"></td> 
       <td><%= user.email %></td> 
       <td>
-        <%= link_to image_tag("admin/icn_edit.png", :title => "Editar usuário"),  admin_edit_user_path(user) %>
+        <%= link_to image_tag("admin/icn_edit.png", :title => "Editar usuário"),  edit_admin_user_path(user) %>
         <input type="image" src="/images/admin/icn_trash.png" title="Trash">
       </td> 
     </tr> 
