--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -6,6 +6,11 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
   </fieldset>
+  
+  <fieldset>
+    <%= f.label "Categoria do site?" %>
+    <%= f.check_box :area %>
+  </fieldset>
 
   <footer>
     <div class="submit_link">
