--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -1,13 +1,74 @@
 <article class="module width_full">
-<header><h3 class="tabs_involved">Content Manager</h3>
+<header><h3 class="tabs_involved">Últimos Conteúdos</h3>
 <ul class="tabs">
-    <li><a href="#tab1">Posts</a></li>
-  <li><a href="#tab2">Comments</a></li>
+  <li><a href="#tab1">Comentários</a></li>
+  <li><a href="#tab2">Posts</a></li>
+  <li><a href="#tab3">Projetos</a></li>
 </ul>
 </header>
 
 <div class="tab_container">
+
 <div id="tab1" class="tab_content">
+<table class="tablesorter" cellspacing="0"> 
+<thead> 
+  <tr> 
+        <th></th> 
+      <th>Comentário</th> 
+      <th>Post</th>
+      <th>Autor</th> 
+      <th>Data</th> 
+      <th>Ações</th> 
+  </tr> 
+</thead> 
+<tbody>
+  <% @comments.each do |comment| %> 
+  <tr> 
+        <td><input type="checkbox"></td> 
+      <td><%= sanitize comment.body, :tags => %w(strong em code a br) %></td> 
+      <td><%= comment.post.title %></td>
+      <td><%= comment.author %></td> 
+      <td><%= comment.created_at.strftime("%d/%m/%Y %l:%M") %></td> 
+      <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
+  </tr> 
+  <% end %>
+  
+</tbody> 
+</table>
+
+</div><!-- end of #tab1 -->
+
+<div id="tab2" class="tab_content">
+<table class="tablesorter" cellspacing="0"> 
+<thead> 
+  <tr> 
+      <th></th> 
+      <th>Título</th> 
+      <th>Categorias</th> 
+      <th>Data de publicação</th> 
+      <th>Ações</th> 
+  </tr> 
+</thead> 
+<tbody> 
+  <% @posts.each do |post| %>
+  <tr> 
+        <td><input type="checkbox"></td> 
+      <td><%= post.title %></td> 
+      <td>
+        <% post.post_categories.each do |post_category| %>
+          <%= post_category.category.name %><br />
+        <% end %>
+      </td> 
+      <td><%= post.published_date.strftime("%d/%m/%Y %l:%M") %></td> 
+      <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
+  </tr> 
+  <% end %>
+</tbody> 
+</table>
+</div><!-- end of #tab2 -->
+
+
+<div id="tab3" class="tab_content">
 <table class="tablesorter" cellspacing="0"> 
 <thead> 
   <tr> 
@@ -56,59 +117,8 @@
   </tr>  
 </tbody> 
 </table>
-</div><!-- end of #tab1 -->
+</div><!-- end of #tab3 -->
 
-<div id="tab2" class="tab_content">
-<table class="tablesorter" cellspacing="0"> 
-<thead> 
-  <tr> 
-        <th></th> 
-      <th>Comment</th> 
-      <th>Posted by</th> 
-      <th>Posted On</th> 
-      <th>Actions</th> 
-  </tr> 
-</thead> 
-<tbody> 
-  <tr> 
-        <td><input type="checkbox"></td> 
-      <td>Lorem Ipsum Dolor Sit Amet</td> 
-      <td>Mark Corrigan</td> 
-      <td>5th April 2011</td> 
-      <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
-  </tr> 
-  <tr> 
-        <td><input type="checkbox"></td> 
-      <td>Ipsum Lorem Dolor Sit Amet</td> 
-      <td>Jeremy Usbourne</td> 
-      <td>6th April 2011</td> 
-        <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
-  </tr>
-  <tr> 
-        <td><input type="checkbox"></td> 
-      <td>Sit Amet Dolor Ipsum</td> 
-      <td>Super Hans</td> 
-      <td>10th April 2011</td> 
-      <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
-  </tr> 
-  <tr> 
-        <td><input type="checkbox"></td> 
-      <td>Dolor Lorem Amet</td> 
-      <td>Alan Johnson</td> 
-      <td>16th April 2011</td> 
-        <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
-  </tr> 
-  <tr> 
-        <td><input type="checkbox"></td> 
-      <td>Dolor Lorem Amet</td> 
-      <td>Dobby</td> 
-      <td>16th April 2011</td> 
-        <td><input type="image" src="images/admin/icn_edit.png" title="Edit"><input type="image" src="images/admin/icn_trash.png" title="Trash"></td> 
-  </tr> 
-</tbody> 
-</table>
-
-</div><!-- end of #tab2 -->
 
 </div><!-- end of .tab_container -->
 
