--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,11 @@
 <header><h3>usuários</h3></header>
 <div class="module_content">
+  
+<% flash.each do |key, value| %>
+  <h4 class="flash <%= key %>"><%= value %></h4>
+  <div class="clear" style="margin:0 0 12px 0;"></div>
+<% end %>
+  
 <table class="tablesorter" cellspacing="0"> 
   <thead> 
   <tr> 
@@ -16,7 +22,10 @@
       <td><%= user.email %></td> 
       <td>
         <%= link_to image_tag("admin/icn_edit.png", :title => "Editar usuário"),  edit_admin_user_path(user) %>
-        <input type="image" src="/images/admin/icn_trash.png" title="Trash">
+          <%= link_to image_tag("admin/icn_trash.png", :title => "Excluir usuário"), admin_user_path(user), 
+                                   :method => :delete,
+      														 :confirm => "Tem certeza que deseja excluir este usuário?",
+      												 		 :title => "Excluir #{user.email}" %>
       </td> 
     </tr> 
   <% end %>
