--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -26,6 +26,24 @@
 </footer>
 
 <script type="text/javascript">
+$('.pagination a').live('click',function(e){  
+  $('<div class="loader clearfix"><img src="/images/loader.gif" width="62" height="13" /></div>').insertAfter('.pagination-container');
+  $('.pagination-container').hide();
+
+  var pg = $('span.current:first').text();
+  var pg_click = $(this).text();
+  var link = this;
+  $.getScript(this.href+"&pg_atual="+pg+"&pg_click="+pg_click, function(){
+    $('.loader').remove();
+    $('.pagination-container').show();
+    $('<a href="/?page='+pg+'" rel="next">'+pg+'</a>').insertAfter('span.current');
+    $('span.current').remove();
+    $('<span class="current">'+pg_click+'</span>').insertAfter(link);
+    $(link).remove();
+  });  
+  e.preventDefault();
+});
+
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
