--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -50,9 +50,9 @@
   		</ul>
   		<h3>Posts</h3>
   		<ul class="toggle">
-  			<li class="icn_new_article"><a href="#">Novo post</a></li>
-  			<li class="icn_edit_article"><a href="#">Editar posts</a></li>
-  			<li class="icn_categories"><a href="#">Comentários</a></li>
+        <li class="icn_new_article"><%= link_to "Novo post", new_admin_post_path %></li>
+        <li class="icn_edit_article"><%= link_to "Editar posts", admin_posts_path %></li>
+        <li class="icn_categories"><%= link_to "Comentários", admin_comments_path %></li>
   		</ul>
   		<h3>Usuários</h3>
   		<ul class="toggle">
