--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,28 +16,7 @@
     
     <% if not @post.block_comments %>
     <h3 id="tit-form-comment">Deixe seu comentário</h3>
-      <% form_for(@post.comments.build, :remote => true) do |f| %>
-        <%= f.hidden_field :post_id, {:value => @post.id} %>
-  			<p>
-  				<%= f.label :author, "* Seu nome " %>
-  				<%= f.text_field :author %>
-  			</p>
-  			<p>
-  				<%= f.label :email, "* Seu e-mail" %><small>(Seu e-mail não será divulgado - serve apenas para validação e gravatar.)</small>
-  				<%= f.text_field :email %>
-  			</p>
-  			<p>
-  				<%= f.label :url, "Você tem site/blog?" %>
-  				<%= f.text_field :url %>
-  			</p>
-  			<p>
-  				<%= f.label :body, "* Digite sua mensagem" %><small>(<strong>Tags HTML permitidas:</strong> &lt;strong&gt; &lt;em&gt; &lt;code&gt; &lt;a&gt;)</small>
-  				<%= f.text_area :body %>
-  			</p>
-  			<p class="action">
-  				<%= f.submit "Enviar comentário"%>
-  			</p>
-  		<% end %>
+      <%= render "comments/form" %>
     <% end %>
   </div>
 </div>
