I think it's kinda done now.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -45,8 +45,8 @@
   		</ul>
   		<h3>Screenshots</h3>
   		<ul class="toggle">
-  			<li class="icn_new_article"><%= link_to "Novo screenshot", "#" %></li>
-  			<li class="icn_edit_article"><%= link_to "Editar screenshots", "#" %></li>
+  			<li class="icn_new_article"><%= link_to "Novo screenshot", new_admin_photo_path %></li>
+  			<li class="icn_edit_article"><%= link_to "Editar screenshots", admin_photos_path %></li>
   		</ul>
   		<h3>Posts</h3>
   		<ul class="toggle">
